feat: added cloudinary config

--- a/.github/workflows/Deploy-to-prod.yml
+++ b/.github/workflows/Deploy-to-prod.yml
@@ -17,3 +17,4 @@ jobs:
           heroku_email: ${{secrets.HEROKU_EMAIL}}
         env:
           HD_DATABASE_URL: ${{secrets.DATABASE_URL}}
+          HD_CLOUDINARY_URL: ${{secrets.CLOUDINARY_URL}}
