--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/app.js"
+    "start": "node dist/app.js",
+    "postinstall": "tsc",
+    "watch-node": "nodemon dist/app.js",
+    "watch-ts": "tsc -w"
   },
   "keywords": [],
   "author": "",
@@ -28,5 +31,8 @@
     "@types/jsonwebtoken": "^8.5.8",
     "tslint": "^6.1.3",
     "typescript": "^4.6.2"
+  },
+  "engines": {
+    "node": "16.14.0"
   }
 }
